Add authorization to system, some requests needs authorization now

--- a/ShoppingSystem/ShoppingSystem.Api/appsettings.json
+++ b/ShoppingSystem/ShoppingSystem.Api/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=../Database/shopping_system.db"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "Key": "SaysTheVoiceFromAfar_DontYouKnowItDoesntHaveToBeSoHard_WaitingForEveryoneElseAroundToAgree_MightTakeTooLong",
+    "Issuer": "ShoppingSystemAPI",
+    "Audience": "ShoppingSystemClient"
+  }
 }
