--- a/ShoppingSystem/ShoppingSystem.Application/ShoppingSystem.Application.csproj
+++ b/ShoppingSystem/ShoppingSystem.Application/ShoppingSystem.Application.csproj
@@ -10,5 +10,11 @@
     <ProjectReference Include="..\ShoppingSystem.Domain\ShoppingSystem.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+  </ItemGroup>
+
 
 </Project>
